--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -5,13 +5,15 @@
 }
 
 /* DOM Elements */
-
 body {
 	background-color: var(--bgcolor);
-	padding-top: 80px;
 }
 
 /* Classes */
+.card-header {
+	font-weight: bold;
+}
+
 .img-thumbnail {
   object-fit: cover;
   height: 250px;
@@ -22,14 +24,30 @@ body {
 	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
-.card-header {
-	font-weight: bold;
-}
-
 /* IDs */
 #content {
 	padding-left: 2%;
 	padding-right: 2%;
+}
+
+#scrollbar {
+	overflow-y: scroll;
+	scroll-behavior: smooth;
+}
+
+#scrollbar::-webkit-scrollbar {
+	width: 10px;
+}
+
+#scrollbar::-webkit-scrollbar-thumb {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+	background-color: var(--bgcolor);
+}
+
+#scrollbar::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	border: 1px solid rgba(255, 255, 255, 0.3);
+	background-color: var(--bgcolor);
 }
 
 /* Small Devices */
