--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,17 +1,17 @@
 /* Vars */
 :root {
-	--accent: #CC4444;
-	--bgcolor: #232323;
-}
+  --accent: #CC4444;
+  --bgcolor: #232323;
+  --bg-negative: #CDCDCD; }
 
 /* DOM Elements */
 body {
-	background-color: var(--bgcolor);
+  background-color: var(--bgcolor);
 }
 
 /* Classes */
 .card-header {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 .img-thumbnail {
@@ -21,39 +21,44 @@ body {
 }
 
 .navbar-toggler-icon {
-	background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
 }
 
 .style-bar {
-	background-color: white;
-	position: absolute;
-	width: 1px;
+  background-color: white;
+  position: absolute;
+  width: 1px;
+}
+
+.subheader {
+  font-weight: 300;
+  line-height: 1.2;
 }
 
 /* IDs */
 #content {
-	padding-left: 2%;
-	padding-right: 2%;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 #scrollbar {
-	overflow-y: scroll;
-	scroll-behavior: smooth;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
 }
 
 #scrollbar::-webkit-scrollbar {
-	width: 10px;
+  width: 10px;
 }
 
 #scrollbar::-webkit-scrollbar-thumb {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
-	background-color: var(--bgcolor);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+  background-color: var(--bg-negative);
 }
 
 #scrollbar::-webkit-scrollbar-track {
-	-webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-	border: 1px solid rgba(255, 255, 255, 0.3);
-	background-color: var(--bgcolor);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  background-color: var(--bgcolor);
 }
 
 /* Small Devices */
@@ -61,9 +66,9 @@ body {
 
 /* Medium Devices */
 @media (min-width: 768px) {
-	.card-columns {
-		column-count: 4;
-	}
+  .card-columns {
+    column-count: 4;
+  }
 }
 
 /* Large Devices */
